@@ -1,8 +1,9 @@
 package cn.nukkit.recipe;
 
 import cn.nukkit.item.Item;
+import cn.nukkit.network.protocol.types.RecipeUnlockingRequirement;
 import cn.nukkit.recipe.descriptor.DefaultDescriptor;
-import cn.nukkit.registry.Registries;
+import cn.nukkit.registry.RecipeRegistry;
 
 import java.util.List;
 import java.util.UUID;
@@ -18,7 +19,11 @@ public class StonecutterRecipe extends CraftingRecipe {
     }
 
     public StonecutterRecipe(String recipeId, UUID uuid, int priority, Item result, Item ingredient) {
-        super(recipeId == null ? Registries.RECIPE.computeRecipeIdWithItem(List.of(result), List.of(ingredient), RecipeType.STONECUTTER) : recipeId, priority);
+        this(recipeId, null, priority, result, ingredient, null);
+    }
+
+    public StonecutterRecipe(String recipeId, UUID uuid, int priority, Item result, Item ingredient, RecipeUnlockingRequirement recipeUnlockingRequirement) {
+        super(recipeId == null ? RecipeRegistry.computeRecipeIdWithItem(List.of(result), List.of(ingredient), RecipeType.STONECUTTER) : recipeId, priority, recipeUnlockingRequirement);
         this.uuid = uuid;
         this.results.add(result.clone());
         if (ingredient.getCount() < 1) {
@@ -28,11 +33,11 @@ public class StonecutterRecipe extends CraftingRecipe {
     }
 
     public Item getResult() {
-        return this.results.get(0).clone();
+        return this.results.getFirst().clone();
     }
 
     public Item getIngredient() {
-        return ingredients.get(0).toItem().clone();
+        return ingredients.getFirst().toItem().clone();
     }
 
     @Override
